--- a/src/App.css
+++ b/src/App.css
@@ -17,21 +17,27 @@ p {
   align-items: center;
 }
 
-.navbar_actions {
-  display: flex;
-  flex-direction: column;
-}
-.navbar_actions button {
-  margin: 5px;
-}
-
 .one_movie_payment_options {
   display: flex;
   flex-direction: row;
   margin: 10px;
 }
-.one_movie_payment_options button {
-  margin: 10px;
+.one_movie_payment_options h4 {
+  padding: 0px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 20px;
+    border: 3px solid transparent;
+    box-shadow: 2px 5px 5px black;
+    background-color: #222A52;
+  
+}
+.one_movie_payment_options h4:hover{
+  background-color: #2f3a70;
+}
+
+.one_movie_payment_options h4:active{
+  transform: translate3d(3px, 3px, 0px);
 }
 
 .info_about_customer {
@@ -39,14 +45,39 @@ p {
   padding: 10px;
   display: flex;
   flex-direction: column;
+  border-radius: 20px;
+  margin-bottom: 10px;
 }
 
 .info_about_customer label {
   margin-bottom: 10px;
 }
 
+.payment_selection{
+  background-color: #d9d9d91a;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+
+.payment_order{
+  background-color: #d9d9d91a;
+  padding: 20px; 
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 input {
-  background-color: inherit;
+  background-color: #b0afaf;
+}
+
+input:hover{
+  background-color: #D9D9D9;
 }
 
 .welcome_movie_container {
@@ -69,3 +100,44 @@ input {
   flex: 0 0 calc(23% - 10px);
   margin-bottom: 20px;
 }
+
+.kundkorg_movie{
+  background-color: #d9d9d91a;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 20px;
+  border: 2px solid transparent;
+  box-shadow: 2px 2px 10px black;
+}
+
+.kundkorg_movie img{
+ background-color: rgb(24, 24, 24);
+ border-radius: 10px;
+ padding: 10px;
+}
+.kundkorg_movie img:hover{
+  background-color: red;
+}
+
+.checka_ut{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+}
+
+.pay_button{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+}
+
+
