--- a/src/App.css
+++ b/src/App.css
@@ -29,18 +29,20 @@ p {
 .one_movie_payment_options {
   display: flex;
   flex-direction: row;
-  margin: 10px;
+  align-items: flex-start;
+  position: absolute;
+  bottom: 10px;
+  right: 50px;
 }
-.one_movie_payment_options h4 {
-  padding: 0px;
+.one_movie_payment_options h4{
     margin: 10px;
-    padding: 10px;
+    padding: 15px; 
     border-radius: 20px;
     border: 3px solid transparent;
     box-shadow: 2px 5px 5px black;
     background-color: #222A52;
-  
 }
+
 .one_movie_payment_options h4:hover{
   background-color: #2f3a70;
 }
@@ -59,7 +61,7 @@ p {
 }
 
 .info_about_customer label {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .payment_selection{
@@ -72,15 +74,17 @@ p {
 }
 
 .payment_order{
-  background-color: #d9d9d91a;
-  padding: 20px; 
-  border-radius: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
 }
 
+.orderList{
+  background-color: #d9d9d91a;
+  padding: 10px; 
+  border-radius: 20px;
+}
 input {
   background-color: #b0afaf;
 }
@@ -95,19 +99,36 @@ input:hover{
   overflow-x: auto;
 }
 
-.small_film_list {
-  margin-left: 10px;
+.small_film_list{
+  margin: 5px;
 }
-
+.small_film_list img{
+  border-radius: 10px;
+  width: 100%;
+}
 .all-movies-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+.all-movies-container > div {
+  width: 20%;
 }
 
-.movie-card {
-  flex: 0 0 calc(23% - 10px);
-  margin-bottom: 20px;
+iframe{
+  border-radius: 10px;
+  width: 100%;
+  height: 250px;
+  margin-bottom: 5px;
+}
+.infoMovie{
+  background-color: #d9d9d91a;
+  padding: 15px;
+  box-shadow: 2px 2px 10px black;
+  border-radius: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .trash-image {
