--- a/src/App.css
+++ b/src/App.css
@@ -33,19 +33,18 @@ p {
 }
 .one_movie_payment_options h4 {
   padding: 0px;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 20px;
-    border: 3px solid transparent;
-    box-shadow: 2px 5px 5px black;
-    background-color: #222A52;
-  
+  margin: 10px;
+  padding: 10px;
+  border-radius: 20px;
+  border: 3px solid transparent;
+  box-shadow: 2px 5px 5px black;
+  background-color: #222a52;
 }
-.one_movie_payment_options h4:hover{
+.one_movie_payment_options h4:hover {
   background-color: #2f3a70;
 }
 
-.one_movie_payment_options h4:active{
+.one_movie_payment_options h4:active {
   transform: translate3d(3px, 3px, 0px);
 }
 
@@ -62,7 +61,7 @@ p {
   margin-bottom: 10px;
 }
 
-.payment_selection{
+.payment_selection {
   background-color: #d9d9d91a;
   padding: 10px;
   display: flex;
@@ -71,9 +70,9 @@ p {
   margin-bottom: 10px;
 }
 
-.payment_order{
+.payment_order {
   background-color: #d9d9d91a;
-  padding: 20px; 
+  padding: 20px;
   border-radius: 20px;
   display: flex;
   flex-direction: row;
@@ -81,12 +80,18 @@ p {
   align-items: flex-start;
 }
 
+/* denna kan tas bort */
+img {
+  max-width: 300px;
+  max-height: 300px;
+}
+
 input {
   background-color: #b0afaf;
 }
 
-input:hover{
-  background-color: #D9D9D9;
+input:hover {
+  background-color: #d9d9d9;
 }
 
 .welcome_movie_container {
@@ -138,7 +143,7 @@ input:hover{
   max-width: 80%;
 }
 
-.kundkorg_movie{
+.kundkorg_movie {
   background-color: #d9d9d91a;
   padding: 10px;
   display: flex;
@@ -150,17 +155,17 @@ input:hover{
   box-shadow: 2px 2px 10px black;
 }
 
-.kundkorg_movie img{
- background-color: rgb(24, 24, 24);
- border-radius: 10px;
- padding: 10px;
+.kundkorg_movie img {
+  background-color: rgb(24, 24, 24);
+  border-radius: 10px;
+  padding: 10px;
 }
 
-.kundkorg_movie img:hover{
+.kundkorg_movie img:hover {
   background-color: red;
 }
 
-.checka_ut{
+.checka_ut {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -169,7 +174,7 @@ input:hover{
   right: 10px;
 }
 
-.pay_button{
+.pay_button {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -177,4 +182,3 @@ input:hover{
   bottom: 20px;
   right: 10px;
 }
-
