--- a/src/App.css
+++ b/src/App.css
@@ -35,17 +35,16 @@ p {
   right: 50px;
 }
 
-  
-.one_movie_payment_options h4{
-    margin: 10px;
-    padding: 15px; 
-    border-radius: 20px;
-    border: 3px solid transparent;
-    box-shadow: 2px 5px 5px black;
-    background-color: #222A52;
+.one_movie_payment_options h4 {
+  margin: 10px;
+  padding: 15px;
+  border-radius: 20px;
+  border: 3px solid transparent;
+  box-shadow: 2px 5px 5px black;
+  background-color: #222a52;
 }
 
-.one_movie_payment_options h4:hover{
+.one_movie_payment_options h4:hover {
   background-color: #2f3a70;
 }
 
@@ -75,17 +74,13 @@ p {
   margin-bottom: 10px;
 }
 
-
-.payment_order img{
+.payment_order img {
   width: 20%;
 }
 
-
-
-
-.orderList{
+.orderList {
   background-color: #d9d9d91a;
-  padding: 10px; 
+  padding: 10px;
   border-radius: 20px;
 }
 
@@ -103,10 +98,10 @@ input:hover {
   overflow-x: auto;
 }
 
-.small_film_list{
+.small_film_list {
   margin: 5px;
 }
-.small_film_list img{
+.small_film_list img {
   border-radius: 10px;
   width: 100%;
 }
@@ -120,14 +115,13 @@ input:hover {
   width: 20%;
 }
 
-
-iframe{
+iframe {
   border-radius: 10px;
   width: 100%;
   height: 250px;
   margin-bottom: 5px;
 }
-.infoMovie{
+.infoMovie {
   background-color: #d9d9d91a;
   padding: 15px;
   box-shadow: 2px 2px 10px black;
@@ -177,24 +171,21 @@ iframe{
   margin-bottom: 10px;
 }
 
-.kundkorg_movie img{
+.kundkorg_movie img {
   width: 20%;
   border-radius: 10px;
 }
 
- .trashImg{
+.trashImg {
   width: 50%;
   display: flex;
   justify-content: flex-end;
- }
- 
+}
 
-.trashImg:hover {
+.trashImg:hover img {
   border-radius: 10px;
   background-color: red;
 }
-
-
 
 .checka_ut {
   display: flex;
